# KusManager

./: .clang-format  .gitignore  CMakeLists.txt
cmake_scripts/: include_database.cmake
sources/: sources.cmake
sources/algorithms/: suffix_tree.cpp  suffix_tree.hpp
sources/core/: command.cpp  command.hpp  core.cpp  core.hpp  core_sources.cmake  evaluater_sources.cmake  user_array.cpp  user_array.hpp
sources/database/: abstract_database.cpp  abstract_database.hpp  base_database.hpp  contest.cpp  contest.hpp  database.cpp  database.hpp  database_query.cpp  database_query.hpp  database_sources.cmake  empty_database.cpp  empty_database.hpp  postgresql.cpp  postgresql.hpp  sqlite_database.cpp  sqlite_database.hpp  submission_info.hpp  user.cpp  user.hpp
sources/domain/: cyrillic.cpp  cyrillic.hpp  domain_sources.cmake  error_message.cpp  error_message.hpp  file_manager.cpp  file_manager.hpp  file_reader.cpp  file_reader.hpp  file_writer.cpp  file_writer.hpp  math.cpp  math.hpp  metaprogramming.hpp  pair.hpp  path.cpp  path.hpp  string.cpp  string.hpp
sources/main/: main.cpp  path.hpp
sources/process/: base_process.cpp  base_process.hpp  pipe_linux_process.cpp  pipe_windows_process.cpp  pipe_windows_process.hpp  process_sources.cmake  windows_process.cpp  windows_process.hpp
sources/tester/: code_info.cpp  code_info.hpp  compiler.cpp  compiler.hpp  core.cpp  core.hpp  test.cpp  test.hpp  tester_sources.cmake  testlib_message.cpp  testlib_message.hpp  thread_signals.cpp  thread_signals.hpp
